# hyperliquid-watcher

./: Cargo.toml
data/: test
examples/: log_txs.rs  stream_blocks.rs
src/: lib.rs  main.rs  parse.rs
