[package]
name = "hyperliquid-node-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
serde = "1.0.204"
ethers = "2.0.14"
serde_json = "1.0.120"
eyre = "0.6.12"
rmp-serde = "1.3.0"
notify = "6.1.1"
log = "0.4.22"
env_logger = "0.11.3"
hyperliquid_rust_sdk = { git = "https://github.com/rpalakkal/hyperliquid-rust-sdk.git", branch = "feat/modify", version = "0.5.0" }
tokio = { version = "1.38.1", features = ["sync"] }
dirs = "5.0.1"
